# coco_arm_mimic

./: CMakeLists.txt  README.md  package.xml
include/: body_tracker_node.hpp  coco_controller.hpp
launch/: coco_mimic.launch.py
scripts/: body_points_detector.py
src/: body_tracker_node.cpp  coco_controller.cpp
